- `preserve-rooms`: don't warn when a room is assigned to a non-existent unit.  this is now common behavior for DF when it keeps a room for an unloaded unit
- fixed an overly restrictive type constraint that resulted in some object types being glossed as a boolean when passed as an argument from C++ to Lua
- `plants`: will no longer generate a traceback when a filter is used

## Misc Improvements
- All places where units are listed in DFHack tools now show the translated English name in addition to the native name. In particular, this makes units searchable by English name in `gui/sitemap`.
- `dig`: ASCII overlay now displays priority of digging designations
- `spectate`: added prefer nicknamed units
- `blueprint`: support for recording zones
- `blueprint`: support for recording stockpile properties like names and stockpile links; does not yet support recording detailed contents configuration

## API
- ``Random`` module: added ``SplitmixRNG`` class, implements the Splitmix64 RNG used by Dwarf Fortress for "simple" randomness
- ``Items::getDescription``: fixed display of quality levels, now displays ALL item designations (in correct order) and obeys vanilla SHOW_IMP_QUALITY setting
- ``cuboid::forCoord``, ``Maps::forCoord``: take additional parameter to control whether iteration goes in column major or row major order

## Lua
- ``script-manager``: new ``get_active_mods()`` function for getting information on active mods
- ``script-manager``: new ``get_mod_info_metadata()`` function for getting information out of mod ``info.txt`` files

## Removed
- removed historically unused ``Core::RegisterData``/``Core::GetData`` API and associated internal data structures

# 51.11-r1.2

## Fixes
- `preserve-tombs`: will no longer crash when a tomb is assigned to a unit that does not exist

# 51.11-r1.1

## Fixes
- `preserve-rooms`: will no longer crash when a civzone is assigned to a unit that does not exist
- `gui/design`: fix misaligned shape icons

# 51.11-r1

## Fixes